# CompileFfmpeg

./: .gitignore  QUICK_START_PATCH.md  README.md  README_MSYS2.md  ULTRA_LOW_LATENCY_README.md  build_ffmpeg_msys2.sh  build_with_java11.bat  fix_ffmpeg_so_v2.sh  gradle.properties  settings.gradle.kts  ultra_low_latency.patch
app/: build.gradle.kts
app/src/androidTest/java/com/jxj/CompileFfmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_wrapper.cpp
app/src/main/java/com/jxj/CompileFfmpeg/: MainActivity.java  RtspPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jxj/CompileFfmpeg/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
